[project]
name = "appyair"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "geopandas>=1.1.1",
    "pandas>=2.3.1",
    "rasterio>=1.4.3",
    "shapely>=2.1.1",
]


[dependency-groups]
dev = [
    "ipython>=9.4.0",
]

# TODO
# [tool.uv]
# # Install the package in project
# package = true

# [project.scripts]
# mtn = "mtn.cmd:main"

# [build-system]
# requires = ["hatchling"]
# build-backend = "hatchling.build"

# [tool.hatch.build]
# packages = ["mtn"]
